src/test/compile-fail/bad-module.rs
// xfail-stage0
// error-pattern: nonexistent module
import vec;

fn main() {
  auto foo = vec.len([]);
}